app/nginx-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-test
 namespace: default
spec:
 replicas: 2
 selector:
   matchLabels:
     app: nginx-test
 template:
   metadata:
     labels:
       app: nginx-test
   spec:
     containers:
     - env:
       - name: service_name
         value: nginx-test
       image: orwelion/nginx:latest
       imagePullPolicy: Always
       name: nginx-test
       ports:
       - containerPort: 80
         protocol: TCP
